kubernetes/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:

      nodeSelector:
        node-type: app

      containers:
      - name: frontend

        image: moinnaik/portfolio-frontend:v3
        
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 80
