kubernetes/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: portfolio-ingress
  namespace: portfolio

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx

  tls:
  - hosts:
      - profile.moinnaik.in
    secretName: portfolio-tls

  rules:
  - host: profile.moinnaik.in

    http:
      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: frontend-service
            port:
              number: 80
